--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "merkletreejs",
-  "version": "0.1.7",
+  "name": "@statesauce/merkletreejs",
+  "version": "0.1.7-ss-0.2",
   "description": "Construct Merkle Trees and verify proofs",
   "main": "dist/index.js",
   "types": "typings/merkletreejs/*",
